logs/main/bot_output.log
  File "/workspace/0dte/trading_bot.py", line 140
    end_date = today + timedelta(days=1)
                                        ^
IndentationError: unindent does not match any outer indentation level
